--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ extra_css:
   - stylesheets/globals.css
   - stylesheets/themes.css
 
+
 nav:
   - Home: index.md
   - Kedro:
@@ -72,18 +73,18 @@ nav:
               - Kedro architecture: pages/getting-started/architecture_overview.md
               - Kedro's CLI: pages/getting-started/commands_reference.md
             #   - Quickstart: pages/getting-started/quickstart.md
-              - Installation: pages/getting-started/install.md
+          - Installation: pages/getting-started/install.md
           - Concepts:
             #   - Terminology: pages/getting-started/terminology.md
               - Glossary: pages/getting-started/glossary.md
-      - Tutorials:
+      - TUTORIALS:
           - Kedro Spaceflights tutorial: pages/tutorials/spaceflights_tutorial.md
           - Kedro for Notebook tutorial: pages/tutorials/notebooks_tutorial.md
       - CREATE:
           - Create a Kedro project: pages/create/new_project.md
           - Create a minimal Kedro project: pages/create/minimal_kedro_project.md
           - Customise a new project: pages/create/customise_project.md
-        #   - Kedro tools:
+          - Kedro tools: pages/create/new_project_tools.md
           - Kedro starters: pages/create/starters.md
       - CONFIGURE:
           - Project configuration and settings:
@@ -112,26 +113,33 @@ nav:
           - Code formatting and linting: pages/develop/linting.md
           - Debugging: pages/develop/debugging.md
       - DEPLOY:
-          - Single-machine deployment: pages/deployment/single_machine.md
-          - Distributed deployment: pages/deployment/distributed.md
+          - Single-machine deployment: pages/deploy/single_machine.md
+          - Distributed deployment: pages/deploy/distributed.md
           - Supported platforms:
-              - Apache Airflow: pages/deployment/supported-platforms/airflow.md
-              - Amazon SageMaker: pages/deployment/supported-platforms/amazon_sagemaker.md
-              - Amazon EMR Serverless: pages/deployment/supported-platforms/amazon_emr_serverless.md
-              - AWS Step Functions: pages/deployment/supported-platforms/aws_step_functions.md
-              - Azure ML pipelines: pages/deployment/supported-platforms/azure.md
-              - Dask: pages/deployment/supported-platforms/dask.md
-              - Databricks: pages/deployment/supported-platforms/databricks.md
-              - Kubeflow Pipelines: pages/deployment/supported-platforms/kubeflow.md
-              - Prefect: pages/deployment/supported-platforms/prefect.md
-              - VertexAI: pages/deployment/supported-platforms/vertexai.md
-              - Argo Workflows: pages/deployment/supported-platforms/argo.md
-              - AWS Batch: pages/deployment/supported-platforms/aws_batch.md
+              - Apache Airflow: pages/deploy/supported-platforms/airflow.md
+              - Amazon SageMaker: pages/deploy/supported-platforms/amazon_sagemaker.md
+              - Amazon EMR Serverless: pages/deploy/supported-platforms/amazon_emr_serverless.md
+              - AWS Step Functions: pages/deploy/supported-platforms/aws_step_functions.md
+              - Azure ML pipelines: pages/deploy/supported-platforms/azure.md
+              - Dask: pages/deploy/supported-platforms/dask.md
+              - Databricks:
+                - Use a Databricks workspace to develop a Kedro project: pages/deploy/supported-platforms/databricks/databricks_notebooks_development_workflow.md
+                - Use an IDE and Databricks asset Bundles to deploy a Kedro project: pages/deploy/supported-platforms/databricks/databricks_ide_databricks_asset_bundles_workflow.md
+                - Use a Databricks job to deploy a Kedro project: pages/deploy/supported-platforms/databricks/databricks_deployment_workflow.md
+                - Use an IDE, dbx and Databricks Repos to develop a Kedro project: pages/deploy/supported-platforms/databricks/databricks_dbx_workflow.md
+              - Kubeflow Pipelines: pages/deploy/supported-platforms/kubeflow.md
+              - Prefect: pages/deploy/supported-platforms/prefect.md
+              - VertexAI: pages/deploy/supported-platforms/vertexai.md
+              - Argo Workflows: pages/deploy/supported-platforms/argo.md
+              - AWS Batch: pages/deploy/supported-platforms/aws_batch.md
       - EXTEND:
           - Use Cases: pages/extend/common_use_cases.md
           - Custom datasets: pages/extend/how_to_create_a_custom_dataset.md
-          - Hooks: pages/extend/hooks.md
-          - Programmatic usage: pages/extend/programmatic_usage.md
+          - Hooks:
+              - Introduction to Hooks: pages/extend/hooks/introduction.md
+              - Common use cases: pages/extend/hooks/common_use_cases.md
+              - Hooks examples: pages/extend/hooks/examples.md
+          - Programmatic usage: pages/extend/session.md
           - Custom plugins: pages/extend/plugins.md
           - Custom starters: pages/extend/create_a_starter.md
       - REFERENCE:
@@ -174,7 +182,7 @@ nav:
                   - node: pages/api/pipeline/kedro.pipeline.node.md
                   - modular_pipeline.pipeline: pages/api/pipeline/kedro.pipeline.modular_pipeline.pipeline.md
                   - Pipeline: pages/api/pipeline/kedro.pipeline.Pipeline.md
-                  - Node: pages/api/pipeline.kedro.pipeline.node.Node.md
+                  - Node: pages/api/pipeline/kedro.pipeline.node.Node.md
                   - ModularPipelineError: pages/api/pipeline/kedro.pipeline.modular_pipeline.ModularPipelineError.md
               - kedro.runner:
                   - Overview: pages/api/runner/kedro.runner.md
@@ -190,24 +198,24 @@ nav:
     #       - Kedro CLI:
       - INTEGRATION & PLUGINS:
         #   - IPython and Jupyter: pages/integration-and-plugins/ipython_and_jupyter.md
-          - PySpark: pages/integration-and-plugins/pyspark_integration.md
-          - MLflow: pages/integration-and-plugins/mlflow.md
-          - DVC: pages/integration-and-plugins/dvc.md
-          - Delta Lake: pages/integration-and-plugins/deltalake_versioning.md
-          - Iceberg: pages/integration-and-plugins/iceberg_versioning.md
+          - PySpark: pages/integrations-and-plugins/pyspark_integration.md
+          - MLflow: pages/integrations-and-plugins/mlflow.md
+        #   - DVC: pages/integrations-and-plugins/dvc.md
+          - Delta Lake: pages/integrations-and-plugins/deltalake_versioning.md
+          - Iceberg: pages/integrations-and-plugins/iceberg_versioning.md
       - IDE SUPPORT:
           - Visual Studio Code: pages/ide/set_up_vscode.md
           - PyCharm: pages/ide/set_up_pycharm.md
       - ABOUT:
-          - Community:
-              - Kedro Slack: pages/about/community/slack.md
-              - Kedro Wizard: pages/about/community/wizard.md
+        #   - Community:
+            #   - Kedro Slack: pages/about/community/slack.md
+            #   - Kedro Wizard: pages/about/community/wizard.md
           - Contributing:
               - Kedro's Technical Steering Committee: pages/about/technical_steering_committee.md
-              - Kedro Maintainer: pages/about/contributing/maintainer.md
-              - Contributing on GitHub: pages/about/contributing/github.md
-              - Contributing documentation: pages/about/contributing/documentation.md
-          - Release notes: pages/about/release_notes.md
+            #   - Kedro Maintainer: pages/about/contributing/maintainer.md
+            #   - Contributing on GitHub: pages/about/contributing/github.md
+            #   - Contributing documentation: pages/about/contributing/documentation.md
+        #   - Release notes: pages/about/release_notes.md
           - Migration guide: pages/about/migration.md
           - Kedro telemetry: pages/about/telemetry.md
   - Kedro-Viz: https://readthedocs.io/projects/kedro-viz
