integrate the RTD search
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ theme:
      # Palette toggle for light mode
     - scheme: light
       toggle:
-        icon: material/brightness-7
+        icon: material/brightness-7 
         name: Switch to dark mode
 
     # Palette toggle for dark mode
@@ -40,6 +40,7 @@ theme:
 
 plugins:
   - search
+  - lint
   - autorefs
   - mermaid2
   - mkdocstrings:
@@ -59,10 +60,14 @@ plugins:
               returns_named_value: false
           paths: [src]
 
+
 extra_css:
   - stylesheets/colors.css
   - stylesheets/globals.css
   - stylesheets/themes.css
+
+extra_javascript:
+  - javascript/readthedocs.js
 
 
 nav:
@@ -175,3 +180,4 @@ nav:
           - kedro.KedroPythonVersionWarning: pages/api/kedro.KedroPythonVersionWarning.md
   - Kedro-Viz: readthedocs.io/projects/kedro-viz
   - Kedro-Datasets: https://docs.kedro.org/projects/kedro-datasets
+
