--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,7 @@ docs = [
     "mkdocs-get-deps>=0.2.0",
     "mkdocstrings>=0.29.1",
     "mkdocstrings-python>=0.29.1",
-    "mkdocs-link-check>=0.1.0"
+    "linkchecker>=10.2.1",
 ]
 jupyter = [
     "ipylab>=1.0.0",
