--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -18,7 +18,7 @@ build:
     # Ensure the output directory exists
     - mkdir -p $READTHEDOCS_OUTPUT/html
     # Move the built site to the Read the Docs output directory
-    - mv site/* $READTHEDOCS_OUTPUT/html
+    - cp -r site/. $READTHEDOCS_OUTPUT/html/
 
 mkdocs:
   configuration: mkdocs.yml
