--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,8 @@ kedro.db
 .pytest_cache/
 kedro/html
 docs/tmp-build-artifacts
+docs/build
+!docs/pages/build
 docs/temp
 docs/node_modules
 docs/source/04_user_guide/source/.ipynb
