--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -247,7 +247,7 @@ nav:
       - INTEGRATION & PLUGINS:
           - IPython and Jupyter:
               - Introduction: pages/integrations-and-plugins/notebooks_and_ipython/index.md
-              - Kedro and Jupter Notebook: pages/integrations-and-plugins/notebooks_and_ipython/kedro_and_notebooks.md
+              - Kedro and Jupyter Notebook: pages/integrations-and-plugins/notebooks_and_ipython/kedro_and_notebooks.md
               - How to add Kedro to Jupyter Notebook: pages/integrations-and-plugins/notebooks_and_ipython/notebook-example/add_kedro_to_a_notebook.md
           - PySpark: pages/integrations-and-plugins/pyspark_integration.md
           - MLflow: pages/integrations-and-plugins/mlflow.md
