Fixing seach box style
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,7 +72,7 @@ extra_javascript:
   - javascript/deindex-old-docs.js
 
 nav:
-  - Home: index.md
+  - Welcome: index.md
   - Kedro:
       - LEARN ABOUT KEDRO:
           - Introduction: pages/introduction/index.md
