update icon for github repo icon
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,8 @@ theme:
     code: Inter Regular
   favicon: "https://kedro.org/images/favicon.ico"
   logo: assets/kedro_logo_black.svg
+  icon:
+    repo: fontawesome/brands/github
 
 
   features:
