render mermaid diagrams
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,7 +146,6 @@ nav:
               - AbstractDataset: pages/api/io/kedro.io.AbstractDataset.md
               - AbstractVersionedDataset: pages/api/io/kedro.io.AbstractVersionedDataset.md
               - CachedDataset: pages/api/io/kedro.io.CachedDataset.md
-              - DataCatalog: pages/api/io/kedro.io.DataCatalog.md
               - LambdaDataset: pages/api/io/kedro.io.LambdaDataset.md
               - MemoryDataset: pages/api/io/kedro.io.MemoryDataset.md
               - Version: pages/api/io/kedro.io.Version.md
@@ -178,3 +177,10 @@ nav:
           - kedro.KedroPythonVersionWarning: pages/api/kedro.KedroPythonVersionWarning.md
   - Kedro-Viz: readthedocs.io/projects/kedro-viz
   - Kedro-Datasets: https://docs.kedro.org/projects/kedro-datasets
+
+markdown_extensions:
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
