make sure uv existed
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,6 +12,7 @@ build:
 
   commands:
     # Install dependencies
+    - pip install uv
     - uv pip install -e ".[docs]"
     # Build the MkDocs documentation
     - mkdocs build
