--- a/kedro/framework/project/rich_logging.yml
+++ b/kedro/framework/project/rich_logging.yml
@@ -9,10 +9,18 @@ handlers:
     # Advance options for customisation.
     # See https://docs.kedro.org/en/stable/logging/logging.html#project-side-logging-configuration
     # tracebacks_show_locals: False
+  
+  plain:
+    class: kedro.logging.PlainTextHandler
 
 loggers:
   kedro:
     level: INFO
+  
+  kedro.runner.plain:
+    level: INFO
+    handlers: [plain]
+    propagate: False
 
 root:
   handlers: [rich]
