Style for info/tip block
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,10 @@ theme:
   logo: assets/kedro_logo_black.svg
   icon:
     repo: fontawesome/brands/github
+    admonition:
+      note: octicons/note-16
+      tip: octicons/info-16
+      importannt: octicons/alert-16
 
 
   features:
