use warning instead of important
Signed-off-by: Huong Nguyen <huong.nguyen@mckinsey.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ theme:
     admonition:
       note: octicons/note-16
       tip: octicons/info-16
-      importannt: octicons/alert-16
+      warning: octicons/alert-16
       example: octicons/code-16
 
   features:
