--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,6 +101,7 @@ markdown_extensions:
 extra_css:
   - stylesheets/colors.css
   - stylesheets/globals.css
+  - stylesheets/typography.css
   - stylesheets/themes.css
   - stylesheets/footer.css
   - stylesheets/welcome.css
