Add pip to dev requirements
As a dependency group, so doesn't get packaged up with kedro

Signed-off-by: David Stanley <david_stanley@mckinsey.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -250,3 +250,8 @@ known-first-party = ["kedro"]
 ignore_missing_imports = true
 disable_error_code = ['misc']
 exclude = ['^kedro/templates/', '^docs/', '^features/steps/test_starter/']
+
+[dependency-groups]
+dev = [
+    "pip>=25.1.1",
+]
