--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,7 @@ docs = [
     "mkdocs-get-deps>=0.2.0",
     "mkdocstrings>=0.29.1",
     "mkdocstrings-python>=0.29.1",
-    "linkchecker>=10.2.1",
+    "griffe"  # Required by mkdocstrings-python for API documentation generation.
 ]
 jupyter = [
     "ipylab>=1.0.0",
