--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -280,5 +280,5 @@ nav:
         #   - Release notes: about/release_notes.md
           - Migration guide: about/migration.md
           - Kedro telemetry: about/telemetry.md
-  - Kedro-Viz: https://docs.kedro.org/projects/kedro-viz/en/feature-12.0/
+  - Kedro-Viz: https://docs.kedro.org/projects/kedro-viz/en/feature-branch-mkdocs/
   - Kedro-Datasets: https://docs.kedro.org/projects/kedro-datasets/en/feature-8.0/
