skip ignore the docs/build

--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ kedro.db
 .pytest_cache/
 kedro/html
 docs/tmp-build-artifacts
+!docs/build
 docs/temp
 docs/node_modules
 docs/source/04_user_guide/source/.ipynb
